# spdrwcli

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
Arduino/spdrw/: spdrw.ino
src/: main.rs
