[package]
name = "spdrw"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
serde_json = "1.0.140"
serialport = "4.7.1"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
